<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solitario Celta</string>
    <string name="txtSinImplementar">¡No implementado aún!</string>
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="txtDialogoFinalAfirmativo">Sí</string>
    <string name="txtDialogoFinalNegativo">No</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutMessage">El juego consiste en ir comiendo piezas
    (en horizontal o en vertical) hasta conseguir que sólo quede una pieza
    en el centro. En cada movimiento, la pieza movida solo puede saltar única una pieza.</string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="nombreJugadorKey">Nombre</string>

    <!-- Reiniciar partida -->
    <string name="txtDialogoReiniciarPartidaTitulo">Reiniciar juego</string>
    <string name="txtDialogoReiniciarPartidaPregunta">¿Desea empezar un nuevo juego?</string>
    <string name="txtDialogoReiniciarAfirmativo">Sí</string>
    <string name="txtDialogoReiniciarNegativo">No</string>

    <!-- Guardar partida -->
    <string name="ficheroPartidaGuardada">PartidaGuardada</string>
    <string name="txtPartidaGuardada">La partida ha sido guardada con éxito</string>

    <!-- Recuperar partida -->
    <string name="txtRecuperadaPartidaGuardada">La partida ha sido recuperada con éxito</string>
    <string name="txtNoExistePartidaGuardada">No hay ninguna partida guardada para poder recuperarla</string>

    <!-- Mejores puntuaciones -->
    <string name="txtOpcionBorrarMejoresPuntuaciones">Borrar mejores puntuaciones</string>
    <string name="txtDialogoMejoresResultados">Borrar mejores resultados</string>
    <string name="txtDialogoMejoresResultadosPregunta">¿Quieres borrar los mejores resultados?</string>
    <string name="txtDialogoMejoresResultadosAfirmativo">Sí</string>
    <string name="txtDialogoMejoresResultadosNegativo">No</string>
    <string name="txtBorrarMejoresResultados">Los mejores resultados han sido borrados con éxito</string>
    <string name="txtOpcionOpcionTiempo">Ordenar por tiempo</string>
    <string name="txtOrdenarPorFichasRestantes">Ordenar por fichas restantes</string>
    <string name="colorRadioButtonKey">azul</string>
    <string name="colorRadioButton">Color de la app</string>
    <string name="textoCambiarColores">Puedes cambiar los colores utilizados por la aplicación a tu gusto</string>

</resources>