<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefTituloCategoria1">
        <EditTextPreference
            android:key="@string/nombreJugadorKey"
            android:title="@string/prefTituloNombreJugador"
            android:summary="@string/prefTextoNombreJugador" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefTituloCategoria2">
        <ListPreference
            android:entries="@array/coloresApp"
            android:entryValues="@array/coloresAppValores"
            android:key="@string/colorRadioButtonKey"
            android:title="@string/colorRadioButton"
            android:summary="@string/textoCambiarColores"></ListPreference>
    </PreferenceCategory>
</PreferenceScreen>
